css/style.css
body {
    font-family: "Quicksand",sans-serif;
    background-color: rgb(236, 253, 255);
    margin: 0;
}

h1 {
    text-align: center;
    font-family: Chicle, sans-serif;
}

nav {
    justify-content: right;
    display: flex;
    background-color: rgb(143,151,121);
    padding-right: 5%;
    border-style: solid;
    border-color: rgb(77,93,83);
}

nav a{
    border-color: rgb(77,93,83);
  border-style:solid;
  border-radius: 30px; 
  padding: 6px;
}

nav a:visited{
    color: rgb(37, 45, 41);
}

nav a:hover {
    padding: 6px;

    border-style: solid;
    border-color: rgb(77,93,83);
    background-color: rgba(211, 223, 176, 0.461)
}

#main hr {
    border-color: rgb(77,93,83);
    border-style:dashed;
}

#me {
    display: block;
    border: 4px solid beige;
    border-radius: 10px;
    box-shadow: 6px 6px 12px rgba(0,0,0,0.3);
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 25px;
}

#grass img{
    position: absolute;
    top: 28px;
}

#cat img{
    position: absolute;
    top: 12px;
}

a {
  color: black; 
  text-decoration: none;
}

a:visited{
    color: rgb(77,93,83);
}
a:hover {
    padding: 3px;
    border-style:hidden;
    border-radius: 20px;
    background-color: rgba(211, 223, 176, 0.461)
}

p {
    text-align: center;
}

#intro {
    text-align: center;
    margin: auto;
    background-color: rgb(236, 253, 255);
    padding: 2%;
}

#intro h1 {
    font-family: "Chicle", sans-serif;
    letter-spacing: 5px;
    font-size: 50px;
    margin-bottom: 0px;
}

#intro h2 {
    margin-top: 5px;
    font-size: 20px; 
    color: rgb(57, 61, 59);
    font-weight: lighter;
}

#main {
    width: 100%;
    background-color: rgb(236, 253, 255);
}


#main h2{
    text-align: center;
    color: rgb(13, 39, 26);
}

h3{
    text-align: center;
}

.three-col {
    display: grid;
    grid-template-columns: repeat(3,1fr);
    margin-bottom: 20px;
}

.one-col {
    text-align: center;
    display: grid;
    grid-template-columns: auto;
    padding: 12px;
}

.card {
    width: 90%;
    background-color: rgb(246, 246, 231);
    box-shadow: 6px 6px 12px rgba(0,0,0,0.3);
}

dl{
    padding: 8px;
}

form {
    display: block;
margin-left: auto;
margin-right: auto;
}

footer {
    width: 100%;
    display: flex;
    justify-content: center;
    border-style: solid;
    background-color: rgb(143,151,121);
    border-color: rgb(77,93,83);
}

footer a{
    color: black; 
    margin: 4px;
    padding: 4px;
  }
  
  footer a:hover {
    background-color: rgba(211, 223, 176, 0.461)
  }
  
  footer a:visited{
    color: rgb(37, 45, 41);
  }

